# 01-rcli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  deny.toml  test.http
.github/workflows/: build.yml
fixtures/: b64_decode.txt  b64_encode.txt  blake3.txt  chachaPoly.key  chachaPoly.nonce  ed25519_signer.txt  ed25519_verifier.txt  index.html
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64_opts.rs  csv_opts.rs  gen_pass_opts.rs  http_opts.rs  jwt_opts.rs  mod.rs  text_opts.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  jwt.rs  mod.rs  text.rs
