[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
authors = ["cjiao100 <1971416012@qq.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.6.0"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.29", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = { version = "0.8.5", features = ["std_rng"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["fs", "macros", "net", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zxcvbn = "3.1.0"
